   -- Fixed bug in combat where if all of the attackers unit in a hex were
      set avoid, the attacker could (in contradiction to the rules) issue
      an attack against an ally.
   -- Fixed bug where FORCE Shield did not protect agaisnt bow attacks.
      Force shield changed to protect against all ranged weapon attacks.
   -- Fixed bug which caused GCC v3.0 to not compile atlantis
   -- Moved TODO list to it's own file
   -- Modified the mount selection code so that if you had a region that
      only allows riding mounts and you have a mount that has ride but not
      fly it still gets correctly selected.
   -- If a region only allows riding but not flying mounts (non currently)
      then a flying mount used in that region will be restricted to the
      maxRiding bonus defined in the MountType structure.
   -- Fixed bug in ForgetSkill where a unit which was an Apprentice and
      forgot any skill which made them an apprentice (only MANIPULATION
      currently) they didn't get unmarked as an apprentice.  (Thanks to
      Ben Lloyd for pointing that out)
   -- Fixed a bug in GIVE ALL EXCEPT which caused a wierdness when you
      tried to give more than you had.
   -- Fixed bug with CanStudy which showed disabled skills.
   -- Fixed bug with DBOWs taking down force shields.  Only *spells* take
      down shields.
   -- Updated skillshows with the patch provided by Andrew Zhilenko which
   -- Patched ADVANCE battle bugs reported by Andrew Zhilenko
      <andrew@nextra.cz>
      makes the logic in there cleaner.
   -- Added Georg Gottschalks 'volcano' terrain.  It's a bit odd in that
      it requires flying to get into (move cost of 6) BUT mounts within it
      only get a max of riding mounts bonus. (IE, a WING gets a max 3 riding
      bonus in it due to trecherous terrain)
   -- Tweaked the quantities of Admantium by default.
   -- Added Javelin weapon designed by Terho T. Uotila
      <ttuotila@cc.helsinki.fi>, who wanted a cheap ranged weapon.