@@ -16,7 +16,7 @@ Jon Bagshaw
 Tom Alsen (aka Tzarg)
     Implementation of the FIND ALL order
 Ben Lloyd
-    Bugfixes and suggestions.
+    Bugfixes and suggestions, and code to implement some of them.
 Georg Gottschalk
 	Bugfixes and suggestions and lots of ideas for Ceran.
 Andrew Zhilenko
