@@ -3264,17 +3264,23 @@ Teach new unit 2 and unit 5 whatever they are studying. <p>
 
 <center><img src="images/bar.jpg" width=347 height=23></center>
 <a name="withdraw"> </a>
+<h4> WITHDRAW [item]
 <h4> WITHDRAW [quantity] [item]</h4>
 
 Use unclaimed funds to aquire basic items that you need.  If you do not
 have sufficient unclaimed, or if you try withdraw any other than a
 non-basic item, an error will be given.   Withdraw can NOT be used in the
-Nexus (to prevent building towers and such there).  <p>
+Nexus (to prevent building towers and such there).  The first form is
+the same as WITHDRAW 1 [item] in the second form.<p>
 
 Examples: <p>
 Withdraw 5 stone.<p>
 <pre>
   WITHDRAW 5 STON
+</pre>
+Withdraw 1 iron.<p>
+<pre>
+  WITHDRAW IRON
 </pre>
 
 <center><img src="images/bar.jpg" width=347 height=23></center>
